--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint *.js **/*.js src/**/*.js"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
@@ -18,6 +19,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-navigation": "^7.11.3",
+    "react-native-reanimated": "^2.0.0",
+    "react-native-screens": "^2.18.1",
     "react-native-web": "^0.15.0"
   },
   "devDependencies": {
