--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-navigation": "^7.11.3",
     "react-native-reanimated": "^2.0.0",
     "react-native-screens": "^2.18.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.0"
   },
   "devDependencies": {
